fix scrollbar

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -711,9 +711,20 @@ main {
       }
     }
     .bottom-content {
-      padding-top: 90px;
+      padding-top: 40px;
+      @media (min-width: 768px) {
+        padding-top: 90px;
+      }
       .main-btn {
-        margin-top: 70px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        float: left;
+        padding: 18px 40px;
+        @media (min-width: 768px) {
+          margin-top: 70px;
+          float: none;
+          padding: 18px 70px;
+        }
       }
     }
     h1 {
@@ -943,9 +954,18 @@ main {
     font-family: $robotoslab;
     margin: 0;
     margin-bottom: 15px;
+    font-size: 26px;
+    @media (min-width: 768px) {
+      font-size: 36px;
+    }
+
   }
   .main-btn {
     margin: 50px 0 10px 0;
+    padding: 18px 30px;
+    @media (min-width: 768px) {
+      padding: 18px 70px;
+    }
   }
 }
 footer{
